--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,12 @@ dependencies {
 
     compileOnly group: "edu.wpi.first.shuffleboard", name: "api", version: "2020.+"
     compileOnly group: "edu.wpi.first.shuffleboard.plugin", name: "networktables", version: "2020.+"
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+
+    testImplementation "org.mockito:mockito-core:3.+"
 }
 
 tasks.register("installPlugin", Copy) {
